# jay-bot

./: .gitignore  .pre-commit-config.yaml  README.md  cli.py  pyproject.toml  requirements.txt  run.py  setup.py
app/: __init__.py  ollama_client.py  routes.py
app/training/: fine_tune.py
app/training/data/: conversations.jsonl
